Disable the background shader fast path when printing

In the presence border-radius, background images are painted via Skia
image shaders (to avoid explicit clipping).  But shaders are poorly
supported in PDF, so this approach yields suboptimal results when
printing.

Detect this case (printing + rounded-rect background image) and avoid
the shader fast path.

BUG=658574
R=schenney@chromium.org,chrishtr@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2808393002
Cr-Commit-Position: refs/heads/master@{#463705}

Former-commit-id: 7a295c16c670ed5c712fa109df65112be4b107a6